svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysvc
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: mysvc2
spec:
  type: NodePort
  selector:
    app: myapp2
  ports:
  - port: 80
    targetPort: 3000
